--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,19 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "mews/captcha": "~3.0",
-        "overtrue/laravel-lang": "~3.0"
+        "overtrue/laravel-lang": "~3.0",
+        "summerblue/laravel-active": "6.*"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "~3.2",
         "barryvdh/laravel-ide-helper": "^2.6",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "laravel/ui": "^1.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^8.0",
+        "summerblue/generator": "6.*"
     },
     "config": {
         "optimize-autoloader": true,
