--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,17 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "ext-json": "*",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "~6.3",
         "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
+        "laravel/horizon": "~3.1",
         "laravel/tinker": "^1.0",
         "mews/captcha": "~3.0",
+        "mews/purifier": "~3.0",
         "overtrue/laravel-lang": "~3.0",
+        "overtrue/pinyin": "~4.0",
         "summerblue/laravel-active": "6.*"
     },
     "require-dev": {
