--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=be16c52430a71e900d6c",
+    "/css/app.css": "/css/app.css?id=0a37ed475b9da332546f"
 }
