--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,9 @@ SMS_ALIYUN_TEMPLATE_REGISTER=
 RATE_LIMITS=
 SIGN_RATE_LIMITS=
 
+# socialite weixin
+WEIXIN_KEY=
+WEIXIN_SECRET=
+WEIXIN_REDIRECT_URI=
+
+
