--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,7 @@ WEIXIN_REDIRECT_URI=
 # jpush
 JPUSH_KEY=
 JPUSH_SECRET=
+
+
+WECHAT_MINI_PROGRAM_APPID=wx756787de07****
+WECHAT_MINI_PROGRAM_SECRET=bb28893cc9cdb3e0f*********
