--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.0",
         "gregwar/captcha": "^1.1",
         "guzzlehttp/guzzle": "~6.3",
+        "hprose/hprose": "^2.0",
         "intervention/image": "^2.5",
         "jpush/jpush": "^3.6",
         "laravel/framework": "^6.2",
